Update RowBinaryFormatWriterTest.java